syntax = "proto3";

package service_a.v1;

import "service_a/v1/api.proto";

message RegisterRequest {
    string email = 1;
    optional string name = 2;
    optional int32 age = 3;
}
  
message RegisterResponse {
    ResponseStatus status = 1;
    string user_id = 2;
}
